fix: multiselect dark mode add css vars

--- a/assets/scss/dark-mode/_vue-multi-select.scss
+++ b/assets/scss/dark-mode/_vue-multi-select.scss
@@ -15,8 +15,17 @@
     border-color: var(--color-medium-gray);
     background-color: var(--color-light);
   }
+  &__tag {
+    background: var(--color-success-darker);
+  }
   &__tags {
     border: 1px solid var(--color-medium-gray);
     background-color: var(--color-light);
+  }
+  &__option--highlight {
+    background: var(--color-success-darker);
+    &:after {
+      background: var(--color-success-darker);
+    }
   }
 }
